--- a/forditoprog_beadano/MainWindow.xaml
+++ b/forditoprog_beadano/MainWindow.xaml
@@ -7,6 +7,92 @@
         mc:Ignorable="d"
         Title="Veremautomata" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition  Height="10px"/>
+
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+
+            <RowDefinition  Height="10px"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10px" />
+
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+
+            <ColumnDefinition Width="10px" />
+        </Grid.ColumnDefinitions>
+
+
+        <Label Content="Ellenőrizendő szöveg:"
+               Grid.Row="1"
+               Grid.Column="1"/>
+
+        <TextBox x:Name="txtBoxInput"
+                 Grid.Row="1"
+                 Grid.Column="2" />
+
+        <Button x:Name="buttonStart"
+                Content="Ellenőrzés indítása" 
+                Grid.Row="1"
+                Grid.Column="3" 
+                Margin="10, 0, 10, 5"/>
+
+        <Label Content="Megnyitott táblázat:"
+               Grid.Row="2"
+               Grid.Column="1" 
+               Grid.ColumnSpan="2" />
+
+        <Button x:Name="buttonLoadTable"
+                Grid.Row="2"
+                Grid.Column="3" 
+                Content="Táblázat betöltése"
+                Margin="10, 0, 10, 5"/>
         
+        <Button x:Name="buttonSaveTable"
+                Grid.Row="2"
+                Grid.Column="4" 
+                Content="Táblázat mentése"
+                Margin="10, 0, 10, 5"/>
+
+        <Label x:Name="labelTransformedText"
+               Content="Az átalakított szöveg: " 
+               Grid.Row="3"
+               Grid.Column="1"
+               Grid.ColumnSpan="2"/>
+
+        <Label x:Name="labelCorrect"
+               Content="Teszt"
+               Grid.Row="3"
+               Grid.Column="3"
+               Grid.ColumnSpan="2"/>
+
+        <DataGrid x:Name="dataGridTable"
+                  Grid.Row="4"
+                  Grid.Column="1"
+                  Grid.ColumnSpan="4"
+                  Margin="0, 10, 10, 0"/>
+
+
+        <Button x:Name="buttonShowTree"
+                Content="Levezetési fa megjelenítése"
+                Grid.Row="1"
+                Grid.Column="5"
+                Margin="0, 0, 0, 10"/>
+
+        <TextBox x:Name="textboxAppliedRules"
+                 IsReadOnly="True"
+                 Grid.Row="2"
+                 Grid.Column="5"
+                 Grid.RowSpan="3" />
+
+
     </Grid>
 </Window>
