--- a/forditoprog_beadano/MainWindow.xaml
+++ b/forditoprog_beadano/MainWindow.xaml
@@ -45,7 +45,8 @@
                 Grid.Column="3" 
                 Margin="10, 0, 10, 5"/>
 
-        <Label Content="Megnyitott táblázat:"
+        <Label x:Name="labelOpenedTable"
+               Content="Megnyitott táblázat:"
                Grid.Row="2"
                Grid.Column="1" 
                Grid.ColumnSpan="2" />
@@ -54,6 +55,7 @@
                 Grid.Row="2"
                 Grid.Column="3" 
                 Content="Táblázat betöltése"
+                Click="LoadTable"
                 Margin="10, 0, 10, 5"/>
         
         <Button x:Name="buttonSaveTable"
