--- a/forditoprog_beadano/MainWindow.xaml
+++ b/forditoprog_beadano/MainWindow.xaml
@@ -82,7 +82,11 @@
                   Grid.Row="4"
                   Grid.Column="1"
                   Grid.ColumnSpan="4"
-                  Margin="0, 10, 10, 0"/>
+                  Margin="0, 10, 10, 0"
+                  SelectionUnit="Cell"
+                  CanUserSortColumns="False"
+                  CanUserAddRows="True"
+                  CanUserReorderColumns="False" />
 
 
         <Button x:Name="buttonShowTree"
