--- a/forditoprog_beadano/MainWindow.xaml
+++ b/forditoprog_beadano/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:forditoprog_beadano"
         mc:Ignorable="d"
-        Title="Veremautomata" Height="450" Width="800">
+        Title="Veremautomata" Height="450" Width="800"
+        MinHeight="450" MinWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition  Height="10px"/>
